--- a/miniprogram-1/app.json
+++ b/miniprogram-1/app.json
@@ -1,6 +1,8 @@
 {
   "pages": [
-    "pages/login/login"
+    "pages/login/login",
+    "pages/index/index",
+    "pages/detailspage/detailspage"
   ],
   "window": {
     "navigationBarBackgroundColor": "#00F5FF"
