--- a/yun-music/miniprogram/app.json
+++ b/yun-music/miniprogram/app.json
@@ -14,6 +14,7 @@
     "navigationBarTitleText": "音乐",
     "navigationBarTextStyle": "white"
   },
+  "requiredBackgroundModes": ["audio", "location"],
   "tabBar": {
     "color": "#bfbfbf",
     "selectedColor": "#d81e06",
