--- a/yun-music/project.config.json
+++ b/yun-music/project.config.json
@@ -14,6 +14,7 @@
 	"libVersion": "2.8.1",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"compileType": "miniprogram",
 	"condition": {
 		"search": {
 			"current": -1,
@@ -30,13 +31,25 @@
 		"game": {
 			"list": []
 		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
 		"miniprogram": {
 			"current": 0,
 			"list": [
 				{
 					"id": -1,
 					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
+					"pathName": "pages/databaseGuide/databaseGuide",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "blog-edit",
+					"pathName": "pages/blog-edit/blog-edit",
+					"query": "nickName=\"A近日点\"&avatarUrl= \"https://wx.qlogo.cn/mmopen/vi_32/Q0j4TwGTfTK9w8aFj…IagKzia1ZSyQfkKhfeibOOldu7CpjkuJm5v669jdDic5g/132\"",
+					"scene": null
 				}
 			]
 		}
