博客功能基本完善，有一丢丢BUG没能修复全部完成，不影响使用

--- a/yun-music/project.config.json
+++ b/yun-music/project.config.json
@@ -15,6 +15,7 @@
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
 	"compileType": "miniprogram",
+	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
 	"condition": {
 		"search": {
 			"current": -1,
