--- a/yun-music/miniprogram/app.json
+++ b/yun-music/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/profile/profile",
     "pages/musiclist/musiclist",
     "pages/player/player",
-    "pages/blog-edit/blog-edit"
+    "pages/blog-edit/blog-edit",
+    "pages/blog-comment/blog-comment"
     
   ],
   "window": {
