小程序全部功能实现

--- a/yun-music/miniprogram/app.json
+++ b/yun-music/miniprogram/app.json
@@ -1,13 +1,14 @@
 {
   "pages": [
-    "pages/blog/blog",
     "pages/playList/playList",
-    
+    "pages/blog/blog",
     "pages/profile/profile",
     "pages/musiclist/musiclist",
     "pages/player/player",
     "pages/blog-edit/blog-edit",
-    "pages/blog-comment/blog-comment"
+    "pages/blog-comment/blog-comment",
+    "pages/profile-playhistory/profile-playhistory",
+    "pages/profile-bloghistory/profile-bloghistory"
     
   ],
   "window": {
